# Palo-Alto-Plugin

./: Dockerfile  event_handler.py  events.yaml  main.py  pyproject.toml
config/: auth.yaml  config.yaml  data.yaml  decryption.yaml  globalprotect.yaml  hip.yaml  iptag.yaml  pa_config.yaml  system.yaml  threat.yaml  traffic.yaml  tunnel.yaml  url.yaml  userid.yaml  wildfire.yaml
docs/: pa_config.md  payload.md  threat_payloads.md  traffic_payloads.md
